--- a/Docusaurus/blog/2024-11-04-POP-QUIZ.md
+++ b/Docusaurus/blog/2024-11-04-POP-QUIZ.md
@@ -1,14 +1,13 @@
 ---
-title: "Pop Quiz"
-date: 2024-11-04
-slug: "POP-QUIZ"
+slug: POP-QUIZ
+title: Pop Quiz
 authors: [wuyu0107, AmeeraKT]
 tags: ["POPQUIZ", "WEEK07"]
 ---
 
 This is our POP QUIZ posting!
 
--- Min Kim and Ameera Khaira Tawfiqa --
+-- Min Kim and Ameera Khaira Tawfiqa
 
 <!--truncate-->
 
